  * Unbound, undefined, undeclared variables now trigger full
    WARNINGs, not just STYLE-WARNINGs, on the assumption that this is
    more often programmer error than deliberate exploitation of undefined
    behaviour.
  * optimization: the hash algorithm for strings has changed to one
    that is less vulnerable to spurious collisions.  (thanks to Juho
    Snellman)
  * optimization: implemented multiplication as a modular
    (UNSIGNED-BYTE 32) operation on the PPC backend.
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** ADJUST-ARRAY now copies the datum in a zero rank array if
       required.
    ** ADJUST-ARRAY no longer adjusts non-adjustable arrays.
    ** MAKE-STRING-INPUT-STREAM accepts NIL as a value for :END.
    ** MAKE-STRING-INPUT-STREAM functions correctly for strings with
       element-type NIL.
    ** CLEAR-INPUT accepts NIL and T for its (optional) stream
       argument.
    ** Ratios can now be printed correctly with *PRINT-BASE* bound to
       2, 8 or 16.
    ** ECHO-STREAMs no longer attempt to echo the end of file value to
       their output stream on EOF from read.
    ** CONCATENATED-STREAM-STREAMS discards constituent streams which
       have been read to end-of-file.
    ** CLOSE works as expected on the null CONCATENATED-STREAM, and on
       STRING-STREAMS.
    ** Printing symbols with *PRINT-CASE* :CAPITALIZE respects the
       description of determination of which consecutive characters
       constitute a word.
    ** Printing the "Space" character with escaping on now yields "#\\ ", 
       rather than "#\\Space", as mandated by ANSI 22.1.3.2.
    ** Reading floating-point numbers with *READ-BASE* set to a number
       less than 10 works correctly.
    ** Reading floating-point numbers with *READ-BASE* set to a number
       more than 10 works correctly.
    ** Printing with *PRINT-READABLY* targets the standard readtable, not
       the readtable currently in effect.

planned incompatible changes in 0.8.x: