@@ -651,6 +651,10 @@ Nikodemus Siivola:
   He provided build fixes, in particular to tame the SunOS toolchain,
   and has fixed many (stream-related and other) bugs besides.
 
+Juho Snellman:
+  He provided several performance enhancements, including a better hash
+  function on strings, and removal of unneccessary bounds checks.
+
 Brian Spilsbury:
   He wrote Unicode-capable versions of SBCL's character, string, and
   stream types and operations on them.
